deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: test-deployment
    labels:
        app: test-deployment
spec:
    replicas: 2
    selector:
        matchLabels:
            app: test
    template:
        metadata:
            labels:
                app: test
        spec:
            containers:
            - name: test-container
              image: test:new
              imagePullPolicy: Never
