service.yaml
apiVersion: v1
kind: Service

metadata:
  name: test-service
  labels:
    app: test-service

spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000 
  selector:
    app: test
